# slsk_mcp

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml  spec.md
.skills/: soulseek-consolidator.skill
src/slsk_mcp/: __init__.py  __main__.py  models.py  server.py  slsk_client.py
tests/: test_client.py  test_server.py
