[project]
name = "slsk-mcp"
version = "0.1.0"
description = "Soulseek MCP server — search and download music via Model Context Protocol"
requires-python = ">=3.10"
dependencies = [
    "aioslsk==1.4.1",
    "mcp>=1.0.0,<2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
slsk-mcp = "slsk_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slsk_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
